--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nabu</groupId>
 	<artifactId>eai-module-glue-console</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>${nabu-eai-module-glue-console-version}</version>
 	<name>eai-module-glue-console</name>
 	<url>http://nabu.be</url>
 
